(executable
   (name bench)
   (modules bench queue)
   (libraries unix bechamel bechamel-notty bechamel-perf bechamel-js notty.unix)
   (flags "-runtime-variant=i"))

(executable
   (name array_accesses)
   (modules array_accesses)
   (libraries unix))

(executable
   (name bug)
   (modules bug)
   (libraries unix))
